@@ -43,12 +43,14 @@ namespace  Obj_flags
 		si_on_moving_barge = 17,// SI's version of 10?
 		is_temporary = 18,	// Is temporary
 		okay_to_land = 21,	// Used for flying-carpet.
+		bg_dont_move = 22,	// Exult-only: BG version of SI's dont_move flag
 		in_dungeon = 23,	// Pretty sure.  If set, you won't
 					//   be accused of stealing food.
 		confused = 25,		// ??Guessing.
 		in_motion = 26,		// ??Guessing (cart, boat)??
 		met = 28,			// Has the npc been met
-		si_tournament = 29,	// SI-Call usecode (eventid=7)
+		si_tournament = 29,	// Call usecode (eventid=7)
+					// Originally SI-only, but allowed for BG in Exult
 		si_zombie = 30,		// Used for sick Neyobi.
 		// Flags > 31
 		polymorph = 32,		// SI.  Pretty sure about this.
