@@ -201,7 +201,7 @@
 	USECODE_INTRINSIC_PTR(set_new_schedules),	// 0xb1
 	USECODE_INTRINSIC_PTR(set_oppressor),	// 0xb2
 	USECODE_INTRINSIC_PTR(si_path_run_usecode),	// 0xb3
-	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb4
+	USECODE_INTRINSIC_PTR(begin_casting_mode),	// 0xb4 (Exult)
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb5
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb6
 	USECODE_INTRINSIC_PTR(UNKNOWN),	// 0xb7
